fix open link in new window

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
         </p>
         <p>
             The details of the assignment task can be found from this link:
-            <a href="https://challenge.dreambroker.jobs/245768c7-b82f-4a77-abbc-d1214acf7163"
+            <a href="https://challenge.dreambroker.jobs/245768c7-b82f-4a77-abbc-d1214acf7163" target="_blank"
             >here</a>
             <h2>My implementation</h2>
         </p>
